添加格林公式，但是没写内容，感觉暂时不需要开发

--- a/Src/DenseReconstruction/DenseReconstruction.vcxproj.filters
+++ b/Src/DenseReconstruction/DenseReconstruction.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="CoordinateConvertParams.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GreenIntegralImage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicData.h">
@@ -70,6 +73,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CoordinateConvertParams.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GreenIntegralImage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
