--- a/Src/DenseReconstruction/DenseReconstruction.vcxproj
+++ b/Src/DenseReconstruction/DenseReconstruction.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Coordinate_Q.cpp" />
     <ClCompile Include="Coordinate_X.cpp" />
     <ClCompile Include="DenseReconstruction.cpp" />
+    <ClCompile Include="GreenIntegralImage.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +104,7 @@
     <ClInclude Include="Coordinate_Q.h" />
     <ClInclude Include="Coordinate_X.h" />
     <ClInclude Include="Coordinate_PointTypes.h" />
+    <ClInclude Include="GreenIntegralImage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
