--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -21,8 +21,16 @@ set(HEADER_FILES CameraObject.h
                 MapPointObject.h
                 MVSObject.h
                 PoseObject.h
-                WorkFlowObject.h)
+                WorkFlowObject.h
+				MVSConfig.h
+)
+
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Eigen3::Eigen)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(${PROJECT_NAME} PRIVATE Sophus::Sophus)
+target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+
 install(TARGETS ${PROJECT_NAME} DESTINATION ${DIVISIBLE_INSTALL_LIB_DIR})
 install(FILES ${HEADER_FILES} DESTINATION ${DIVISIBLE_INSTALL_INCLUDE_DIR}/${NAME_POSTFIX})
