add part of dataflow classes' declaration and add some documents. redesigned the folder structure.

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-include/
-lib/
-bin/
+install/
 doc/doxygen/
 doc/Doxyfile
+.vscode/
+
