--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 
-set(DIVISIBLE_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
-set(DIVISIBLE_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
-set(DIVISIBLE_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
+set(DIVISIBLE_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/install/include)
+set(DIVISIBLE_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/install/bin)
+set(DIVISIBLE_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/install/lib)
+set(DIVISIBLE_INSTALL_DOC_DIR ${PROJECT_SOURCE_DIR}/install/doc)
 
 #set(DIVISION_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/division)
 
@@ -32,14 +33,14 @@ find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 find_package(nlohmann_json CONFIG REQUIRED)
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
-include_directories(${PROJECT_SOURCE_DIR}/src/common)
+include_directories(${PROJECT_SOURCE_DIR}/core)
+include_directories(${PROJECT_SOURCE_DIR}/core/common)
 
 if(WIN32)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 endif(WIN32)
 
-add_subdirectory(src)
+add_subdirectory(core)
 add_subdirectory(app)
 
 include(doc/CMakeLists.txt)
