--- a/core/common/CMakeLists.txt
+++ b/core/common/CMakeLists.txt
@@ -10,7 +10,6 @@ set(SOURCE_FILES CameraObject.cpp
                 FrameObject.cpp
                 MapPointObject.cpp
                 MVSObject.cpp
-                PoseObject.cpp
                 WorkFlowObject.cpp)
 
 set(HEADER_FILES CameraObject.h
@@ -20,7 +19,6 @@ set(HEADER_FILES CameraObject.h
                 FrameObject.h
                 MapPointObject.h
                 MVSObject.h
-                PoseObject.h
                 WorkFlowObject.h
 				MVSConfig.h
 )
@@ -31,6 +29,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Eigen3::Eigen)
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 target_link_libraries(${PROJECT_NAME} PRIVATE Sophus::Sophus)
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${DBoW2_LIBS})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${DIVISIBLE_INSTALL_LIB_DIR})
 install(FILES ${HEADER_FILES} DESTINATION ${DIVISIBLE_INSTALL_INCLUDE_DIR}/${NAME_POSTFIX})
