fix dataflow trigger issue add some workflow skeleton some workflow have save and load virtual method unimpelemented dense reconstruction workflow is not implemented yet, but pretty much the same as other workflow add documents for implemented classes.

--- a/core/DenseReconstruction/CMakeLists.txt
+++ b/core/DenseReconstruction/CMakeLists.txt
@@ -10,7 +10,8 @@ set(SOURCE_FILES DenseOptimizer.cpp
 set(HEADER_FILES DenseOptimizer.h
                 DenseReconstructor.h)
 
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
+add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${DIVISIBLE_INSTALL_LIB_DIR})
