--- a/core/PostFilter/CMakeLists.txt
+++ b/core/PostFilter/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.2)
 
-set(NAME_POSTFIX PoseFilter)
+set(NAME_POSTFIX PostFilter)
 project(${CMAKE_PROJECT_NAME}_${NAME_POSTFIX})
 
 
@@ -8,6 +8,6 @@ set(SOURCE_FILES DenseFilter.cpp)
 
 set(HEADER_FILES DenseFilter.cpp)
 
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
+add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 install(TARGETS ${PROJECT_NAME} DESTINATION ${DIVISIBLE_INSTALL_LIB_DIR})
 install(FILES ${HEADER_FILES} DESTINATION ${DIVISIBLE_INSTALL_INCLUDE_DIR}/${NAME_POSTFIX})
