--- a/core/DenseReconstruction/CMakeLists.txt
+++ b/core/DenseReconstruction/CMakeLists.txt
@@ -5,10 +5,14 @@ project(${CMAKE_PROJECT_NAME}_${NAME_POSTFIX})
 
 
 set(SOURCE_FILES DenseOptimizer.cpp
-                DenseReconstructor.cpp)
+                DenseReconstructor.cpp
+                DualFrameReconstructor.cpp
+                OptimalFrameFinder.cpp)
 
 set(HEADER_FILES DenseOptimizer.h
-                DenseReconstructor.h)
+                DenseReconstructor.h
+                DualFrameReconstructor.h
+                OptimalFrameFinder.h)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Eigen3::Eigen)
