--- a/core/FeatureExtraction/CMakeLists.txt
+++ b/core/FeatureExtraction/CMakeLists.txt
@@ -5,10 +5,12 @@ project(${CMAKE_PROJECT_NAME}_${NAME_POSTFIX})
 
 
 set(SOURCE_FILES FeatureExtractor.cpp
-                FeatureMatcher.cpp)
+                FeatureMatcher.cpp
+                VocTreeMatcher.cpp)
 
 set(HEADER_FILES FeatureExtractor.h
-                FeatureMatcher.h)
+                FeatureMatcher.h
+                VocTreeMatcher.h)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Eigen3::Eigen)
