add new type of jsonsaver. add save method for frame and map class, haven't tested it. add global configuration class.

--- a/core/common/CMakeLists.txt
+++ b/core/common/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE_FILES CameraObject.cpp
                 MapPointObject.cpp
                 MVSObject.cpp
                 WorkFlowObject.cpp
+                MVSConfig.cpp
                 GlobalMapObject.cpp)
 
 set(HEADER_FILES CameraObject.h
