change doxygen to more modern build

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,26 +1,23 @@
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required(VERSION 3.9)
 
 project(doc_doxygen)
 
 find_package(Doxygen)
 
 if (DOXYGEN_FOUND)
-    # set input and output files
-    set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile.in)
-    set(DOXYGEN_OUT ${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile)
-
-    # request to configure the file
-    configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
     message("Doxygen build started")
 
-    # note the option ALL which allows to build the docs together with the application
-    add_custom_target( ${PROJECT_NAME} ALL
-        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/doc
-        COMMENT "Generating API documentation with Doxygen"
-        VERBATIM )
+    set(DOXYGEN_PROJECT_NAME "EasyMVS")
+    set(DOXYGEN_PROJECT_BRIEF "simple 3D reconstruction framework")
+
+    doxygen_add_docs(
+        ${PROJECT_NAME}
+        ${CMAKE_SOURCE_DIR}/core
+        ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+
 else (DOXYGEN_FOUND)
   message("Doxygen need to be installed to generate the doxygen documentation")
 endif (DOXYGEN_FOUND)
 
-#install(TARGETS ${PROJECT_NAME} DESTINATION ${DIVISIBLE_INSTALL_DOC_DIR})
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION ${DIVISIBLE_INSTALL_DOC_DIR})
