1. implemented featureextraction model(orb part) 2. add save load basic test first time to run the system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ find_package(PCL CONFIG REQUIRED)
 find_package(Eigen3 CONFIG REQUIRED)
 find_package(Sophus CONFIG REQUIRED)
 find_package(DBoW2 CONFIG REQUIRED)
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
 find_package(nlohmann_json CONFIG REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/core)
