--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.2)
 project(${CMAKE_PROJECT_NAME}_app)
 
 add_subdirectory(PictureInputSFM)
+add_subdirectory(VideoInputandSaveTest)
