add vocaburary tree based image matcher

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,3 +4,4 @@ project(${CMAKE_PROJECT_NAME}_app)
 
 add_subdirectory(PictureInputSFM)
 add_subdirectory(VideoInputandSaveTest)
+add_subdirectory(VocDBGenerator)
