--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -9,15 +9,22 @@ if (DOXYGEN_FOUND)
 
     set(DOXYGEN_PROJECT_NAME "EasyMVS")
     set(DOXYGEN_PROJECT_BRIEF "simple 3D reconstruction framework")
-
-    doxygen_add_docs(
+    if(BUILD_DOC)
+        doxygen_add_docs(
         ${PROJECT_NAME}
         ${CMAKE_SOURCE_DIR}/core
         ${CMAKE_CURRENT_SOURCE_DIR}
-    )
+        )
+    endif(BUILD_DOC)
+    
 
 else (DOXYGEN_FOUND)
   message("Doxygen need to be installed to generate the doxygen documentation")
 endif (DOXYGEN_FOUND)
 
-install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION ${DIVISIBLE_INSTALL_DOC_DIR})
+
+if (DOXYGEN_FOUND)
+    if(BUILD_DOC)
+	    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION ${DIVISIBLE_INSTALL_DOC_DIR})
+	endif(BUILD_DOC)
+endif (DOXYGEN_FOUND)
