添加了反光点识别算法

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(PictureInputSFM)
 add_subdirectory(VideoInputandSaveTest)
 add_subdirectory(VocDBGenerator)
 add_subdirectory(PictureInputMVS)
+add_subdirectory(ReflectiveSticker)
