--- a/core/PoseReconstruction/CMakeLists.txt
+++ b/core/PoseReconstruction/CMakeLists.txt
@@ -7,12 +7,16 @@ project(${CMAKE_PROJECT_NAME}_${NAME_POSTFIX})
 set(SOURCE_FILES PoseOptimizer.cpp
                 PoseReconstructor.cpp
                 PinholePoseReconstructor.cpp
-                BundlePoseOptimizer.cpp)
+                BundlePoseOptimizer.cpp
+				ReflectiveReconstructor.cpp
+)
 
 set(HEADER_FILES PoseOptimizer.h
                 PoseReconstructor.h
                 PinholePoseReconstructor.h
-                BundlePoseOptimizer.h)
+                BundlePoseOptimizer.h
+				ReflectiveReconstructor.h
+)
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS} Eigen3::Eigen)
