--- a/app/ReflectiveSticker/CMakeLists.txt
+++ b/app/ReflectiveSticker/CMakeLists.txt
@@ -3,7 +3,12 @@ cmake_minimum_required(VERSION 3.2)
 set(NAME_POSTFIX ReflectiveSticker)
 project(${CMAKE_PROJECT_NAME}_${NAME_POSTFIX})
 
-set(SOURCE_FILES main.cpp )
+set(SOURCE_FILES 
+	main.cpp 
+	MainWindow.cpp
+	MainWindow.h
+	MainWindow.ui
+)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} PRIVATE 
@@ -11,10 +16,12 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 						DenseReconstruction_CameraModule
 						DenseReconstruction_FeatureExtraction
 						DenseReconstruction_PoseReconstruction
+						DenseReconstruction_Visualization
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE ${OPENCV_LIBS} Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(${PROJECT_NAME} PRIVATE Sophus::Sophus)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${PCL_LIBRARIES})
 
 
 install(TARGETS ${PROJECT_NAME} DESTINATION ${DIVISIBLE_INSTALL_BIN_DIR})
