--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 3.2)
 
 project(${CMAKE_PROJECT_NAME}_app)
 
-add_subdirectory(PictureInputSFM)
-add_subdirectory(VideoInputandSaveTest)
-add_subdirectory(VocDBGenerator)
-add_subdirectory(PictureInputMVS)
 add_subdirectory(ReflectiveSticker)
+add_subdirectory(ReflectiveStickerLib)
+add_subdirectory(ReflectiveStickerDemo)
